# cmalib

./: CMakeLists.txt  Makefile  README.md
include/: cmalib.h
include/cma/: cmalib.h
test-cases/: compile.cpp
tests/: CMakeLists.txt  pmr_tests.cpp
